parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> api_map_definition
Rule 1     api_map_definition -> MAPA_API LBRACE optional_declarations RBRACE
Rule 2     optional_declarations -> declarations
Rule 3     optional_declarations -> empty_rule
Rule 4     declarations -> declarations declaration
Rule 5     declarations -> declaration
Rule 6     declaration -> api_declaration
Rule 7     declaration -> resource_definition
Rule 8     declaration -> header_definition
Rule 9     declaration -> function_definition
Rule 10    api_declaration -> API IDENTIFIER COLON STRING SEMICOLON
Rule 11    resource_definition -> RECURSO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER LBRACE optional_resource_body RBRACE
Rule 12    optional_resource_body -> resource_body
Rule 13    optional_resource_body -> empty_rule
Rule 14    resource_body -> resource_body resource_statement
Rule 15    resource_body -> resource_statement
Rule 16    resource_statement -> method_definition
Rule 17    resource_statement -> parameter_definition
Rule 18    resource_statement -> field_definition
Rule 19    resource_statement -> transformation_definition
Rule 20    method_definition -> METODO IDENTIFIER PARA IDENTIFIER SEMICOLON
Rule 21    parameter_definition -> PARAMETRO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER optional_parameter_converter SEMICOLON
Rule 22    parameter_definition -> PARAMETRO STRING DE IDENTIFIER optional_parameter_converter SEMICOLON
Rule 23    optional_parameter_converter -> LBRACE CONVERTER COM STRING SEMICOLON RBRACE
Rule 24    optional_parameter_converter -> empty_rule
Rule 25    field_definition -> CAMPO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER optional_format optional_converter SEMICOLON
Rule 26    optional_format -> FORMATO STRING
Rule 27    optional_format -> empty_rule
Rule 28    optional_converter -> LBRACE CONVERTER COM STRING SEMICOLON RBRACE
Rule 29    optional_converter -> empty_rule
Rule 30    transformation_definition -> TRANSFORMAR VALOR source_condition PARA target_assignment SEMICOLON
Rule 31    field_path_segments -> IDENTIFIER
Rule 32    field_path_segments -> field_path_segments DOT IDENTIFIER
Rule 33    source_condition -> IDENTIFIER DOT field_path_segments OPERATOR_EQ STRING
Rule 34    target_assignment -> IDENTIFIER DOT field_path_segments OPERATOR_ASSIGN STRING
Rule 35    header_definition -> CABECALHO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON
Rule 36    header_definition -> CABECALHO STRING COM STRING SEMICOLON
Rule 37    function_param_identifier -> IDENTIFIER
Rule 38    function_param_identifier -> VALOR
Rule 39    function_param_list -> function_param_list COMMA function_param_identifier
Rule 40    function_param_list -> function_param_identifier
Rule 41    optional_function_params -> function_param_list
Rule 42    optional_function_params -> empty_rule
Rule 43    function_definition -> FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN LBRACE function_body_placeholder RBRACE
Rule 44    function_body_placeholder -> empty_rule
Rule 45    empty_rule -> <empty>

Terminals, with rules where they appear

API                  : 10
CABECALHO            : 35 36
CAMPO                : 25
COLON                : 10
COM                  : 23 28 36
COMMA                : 39
CONVERTER            : 23 28
DE                   : 11 21 22 25 35
DOT                  : 32 33 34
EM                   : 11 21 25 35
FORMATO              : 26
FUNCAO               : 43
IDENTIFIER           : 10 11 11 20 20 21 21 22 25 25 31 32 33 34 35 35 37 43
LBRACE               : 1 11 23 28 43
LPAREN               : 43
MAPA_API             : 1
METODO               : 20
OPERATOR_ASSIGN      : 34
OPERATOR_EQ          : 33
PARA                 : 11 20 21 25 30 35
PARAMETRO            : 21 22
RBRACE               : 1 11 23 28 43
RECURSO              : 11
RPAREN               : 43
SEMICOLON            : 10 20 21 22 23 25 28 30 35 36
STRING               : 10 11 11 21 21 22 23 25 25 26 28 33 34 35 35 36 36
TRANSFORMAR          : 30
VALOR                : 30 38
error                : 

Nonterminals, with rules where they appear

api_declaration      : 6
api_map_definition   : 0
declaration          : 4 5
declarations         : 2 4
empty_rule           : 3 13 24 27 29 42 44
field_definition     : 18
field_path_segments  : 32 33 34
function_body_placeholder : 43
function_definition  : 9
function_param_identifier : 39 40
function_param_list  : 39 41
header_definition    : 8
method_definition    : 16
optional_converter   : 25
optional_declarations : 1
optional_format      : 25
optional_function_params : 43
optional_parameter_converter : 21 22
optional_resource_body : 11
parameter_definition : 17
resource_body        : 12 14
resource_definition  : 7
resource_statement   : 14 15
source_condition     : 30
target_assignment    : 30
transformation_definition : 19

Parsing method: LALR

state 0

    (0) S' -> . api_map_definition
    (1) api_map_definition -> . MAPA_API LBRACE optional_declarations RBRACE

    MAPA_API        shift and go to state 2

    api_map_definition             shift and go to state 1

state 1

    (0) S' -> api_map_definition .



state 2

    (1) api_map_definition -> MAPA_API . LBRACE optional_declarations RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) api_map_definition -> MAPA_API LBRACE . optional_declarations RBRACE
    (2) optional_declarations -> . declarations
    (3) optional_declarations -> . empty_rule
    (4) declarations -> . declarations declaration
    (5) declarations -> . declaration
    (45) empty_rule -> .
    (6) declaration -> . api_declaration
    (7) declaration -> . resource_definition
    (8) declaration -> . header_definition
    (9) declaration -> . function_definition
    (10) api_declaration -> . API IDENTIFIER COLON STRING SEMICOLON
    (11) resource_definition -> . RECURSO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER LBRACE optional_resource_body RBRACE
    (35) header_definition -> . CABECALHO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON
    (36) header_definition -> . CABECALHO STRING COM STRING SEMICOLON
    (43) function_definition -> . FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN LBRACE function_body_placeholder RBRACE

    RBRACE          reduce using rule 45 (empty_rule -> .)
    API             shift and go to state 12
    RECURSO         shift and go to state 13
    CABECALHO       shift and go to state 14
    FUNCAO          shift and go to state 15

    optional_declarations          shift and go to state 4
    declarations                   shift and go to state 5
    empty_rule                     shift and go to state 6
    declaration                    shift and go to state 7
    api_declaration                shift and go to state 8
    resource_definition            shift and go to state 9
    header_definition              shift and go to state 10
    function_definition            shift and go to state 11

state 4

    (1) api_map_definition -> MAPA_API LBRACE optional_declarations . RBRACE

    RBRACE          shift and go to state 16


state 5

    (2) optional_declarations -> declarations .
    (4) declarations -> declarations . declaration
    (6) declaration -> . api_declaration
    (7) declaration -> . resource_definition
    (8) declaration -> . header_definition
    (9) declaration -> . function_definition
    (10) api_declaration -> . API IDENTIFIER COLON STRING SEMICOLON
    (11) resource_definition -> . RECURSO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER LBRACE optional_resource_body RBRACE
    (35) header_definition -> . CABECALHO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON
    (36) header_definition -> . CABECALHO STRING COM STRING SEMICOLON
    (43) function_definition -> . FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN LBRACE function_body_placeholder RBRACE

    RBRACE          reduce using rule 2 (optional_declarations -> declarations .)
    API             shift and go to state 12
    RECURSO         shift and go to state 13
    CABECALHO       shift and go to state 14
    FUNCAO          shift and go to state 15

    declaration                    shift and go to state 17
    api_declaration                shift and go to state 8
    resource_definition            shift and go to state 9
    header_definition              shift and go to state 10
    function_definition            shift and go to state 11

state 6

    (3) optional_declarations -> empty_rule .

    RBRACE          reduce using rule 3 (optional_declarations -> empty_rule .)


state 7

    (5) declarations -> declaration .

    API             reduce using rule 5 (declarations -> declaration .)
    RECURSO         reduce using rule 5 (declarations -> declaration .)
    CABECALHO       reduce using rule 5 (declarations -> declaration .)
    FUNCAO          reduce using rule 5 (declarations -> declaration .)
    RBRACE          reduce using rule 5 (declarations -> declaration .)


state 8

    (6) declaration -> api_declaration .

    API             reduce using rule 6 (declaration -> api_declaration .)
    RECURSO         reduce using rule 6 (declaration -> api_declaration .)
    CABECALHO       reduce using rule 6 (declaration -> api_declaration .)
    FUNCAO          reduce using rule 6 (declaration -> api_declaration .)
    RBRACE          reduce using rule 6 (declaration -> api_declaration .)


state 9

    (7) declaration -> resource_definition .

    API             reduce using rule 7 (declaration -> resource_definition .)
    RECURSO         reduce using rule 7 (declaration -> resource_definition .)
    CABECALHO       reduce using rule 7 (declaration -> resource_definition .)
    FUNCAO          reduce using rule 7 (declaration -> resource_definition .)
    RBRACE          reduce using rule 7 (declaration -> resource_definition .)


state 10

    (8) declaration -> header_definition .

    API             reduce using rule 8 (declaration -> header_definition .)
    RECURSO         reduce using rule 8 (declaration -> header_definition .)
    CABECALHO       reduce using rule 8 (declaration -> header_definition .)
    FUNCAO          reduce using rule 8 (declaration -> header_definition .)
    RBRACE          reduce using rule 8 (declaration -> header_definition .)


state 11

    (9) declaration -> function_definition .

    API             reduce using rule 9 (declaration -> function_definition .)
    RECURSO         reduce using rule 9 (declaration -> function_definition .)
    CABECALHO       reduce using rule 9 (declaration -> function_definition .)
    FUNCAO          reduce using rule 9 (declaration -> function_definition .)
    RBRACE          reduce using rule 9 (declaration -> function_definition .)


state 12

    (10) api_declaration -> API . IDENTIFIER COLON STRING SEMICOLON

    IDENTIFIER      shift and go to state 18


state 13

    (11) resource_definition -> RECURSO . STRING DE IDENTIFIER PARA STRING EM IDENTIFIER LBRACE optional_resource_body RBRACE

    STRING          shift and go to state 19


state 14

    (35) header_definition -> CABECALHO . STRING DE IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON
    (36) header_definition -> CABECALHO . STRING COM STRING SEMICOLON

    STRING          shift and go to state 20


state 15

    (43) function_definition -> FUNCAO . IDENTIFIER LPAREN optional_function_params RPAREN LBRACE function_body_placeholder RBRACE

    IDENTIFIER      shift and go to state 21


state 16

    (1) api_map_definition -> MAPA_API LBRACE optional_declarations RBRACE .

    $end            reduce using rule 1 (api_map_definition -> MAPA_API LBRACE optional_declarations RBRACE .)


state 17

    (4) declarations -> declarations declaration .

    API             reduce using rule 4 (declarations -> declarations declaration .)
    RECURSO         reduce using rule 4 (declarations -> declarations declaration .)
    CABECALHO       reduce using rule 4 (declarations -> declarations declaration .)
    FUNCAO          reduce using rule 4 (declarations -> declarations declaration .)
    RBRACE          reduce using rule 4 (declarations -> declarations declaration .)


state 18

    (10) api_declaration -> API IDENTIFIER . COLON STRING SEMICOLON

    COLON           shift and go to state 22


state 19

    (11) resource_definition -> RECURSO STRING . DE IDENTIFIER PARA STRING EM IDENTIFIER LBRACE optional_resource_body RBRACE

    DE              shift and go to state 23


state 20

    (35) header_definition -> CABECALHO STRING . DE IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON
    (36) header_definition -> CABECALHO STRING . COM STRING SEMICOLON

    DE              shift and go to state 24
    COM             shift and go to state 25


state 21

    (43) function_definition -> FUNCAO IDENTIFIER . LPAREN optional_function_params RPAREN LBRACE function_body_placeholder RBRACE

    LPAREN          shift and go to state 26


state 22

    (10) api_declaration -> API IDENTIFIER COLON . STRING SEMICOLON

    STRING          shift and go to state 27


state 23

    (11) resource_definition -> RECURSO STRING DE . IDENTIFIER PARA STRING EM IDENTIFIER LBRACE optional_resource_body RBRACE

    IDENTIFIER      shift and go to state 28


state 24

    (35) header_definition -> CABECALHO STRING DE . IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 29


state 25

    (36) header_definition -> CABECALHO STRING COM . STRING SEMICOLON

    STRING          shift and go to state 30


state 26

    (43) function_definition -> FUNCAO IDENTIFIER LPAREN . optional_function_params RPAREN LBRACE function_body_placeholder RBRACE
    (41) optional_function_params -> . function_param_list
    (42) optional_function_params -> . empty_rule
    (39) function_param_list -> . function_param_list COMMA function_param_identifier
    (40) function_param_list -> . function_param_identifier
    (45) empty_rule -> .
    (37) function_param_identifier -> . IDENTIFIER
    (38) function_param_identifier -> . VALOR

    RPAREN          reduce using rule 45 (empty_rule -> .)
    IDENTIFIER      shift and go to state 31
    VALOR           shift and go to state 36

    optional_function_params       shift and go to state 32
    function_param_list            shift and go to state 33
    empty_rule                     shift and go to state 34
    function_param_identifier      shift and go to state 35

state 27

    (10) api_declaration -> API IDENTIFIER COLON STRING . SEMICOLON

    SEMICOLON       shift and go to state 37


state 28

    (11) resource_definition -> RECURSO STRING DE IDENTIFIER . PARA STRING EM IDENTIFIER LBRACE optional_resource_body RBRACE

    PARA            shift and go to state 38


state 29

    (35) header_definition -> CABECALHO STRING DE IDENTIFIER . PARA STRING EM IDENTIFIER SEMICOLON

    PARA            shift and go to state 39


state 30

    (36) header_definition -> CABECALHO STRING COM STRING . SEMICOLON

    SEMICOLON       shift and go to state 40


state 31

    (37) function_param_identifier -> IDENTIFIER .

    COMMA           reduce using rule 37 (function_param_identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 37 (function_param_identifier -> IDENTIFIER .)


state 32

    (43) function_definition -> FUNCAO IDENTIFIER LPAREN optional_function_params . RPAREN LBRACE function_body_placeholder RBRACE

    RPAREN          shift and go to state 41


state 33

    (41) optional_function_params -> function_param_list .
    (39) function_param_list -> function_param_list . COMMA function_param_identifier

    RPAREN          reduce using rule 41 (optional_function_params -> function_param_list .)
    COMMA           shift and go to state 42


state 34

    (42) optional_function_params -> empty_rule .

    RPAREN          reduce using rule 42 (optional_function_params -> empty_rule .)


state 35

    (40) function_param_list -> function_param_identifier .

    COMMA           reduce using rule 40 (function_param_list -> function_param_identifier .)
    RPAREN          reduce using rule 40 (function_param_list -> function_param_identifier .)


state 36

    (38) function_param_identifier -> VALOR .

    COMMA           reduce using rule 38 (function_param_identifier -> VALOR .)
    RPAREN          reduce using rule 38 (function_param_identifier -> VALOR .)


state 37

    (10) api_declaration -> API IDENTIFIER COLON STRING SEMICOLON .

    API             reduce using rule 10 (api_declaration -> API IDENTIFIER COLON STRING SEMICOLON .)
    RECURSO         reduce using rule 10 (api_declaration -> API IDENTIFIER COLON STRING SEMICOLON .)
    CABECALHO       reduce using rule 10 (api_declaration -> API IDENTIFIER COLON STRING SEMICOLON .)
    FUNCAO          reduce using rule 10 (api_declaration -> API IDENTIFIER COLON STRING SEMICOLON .)
    RBRACE          reduce using rule 10 (api_declaration -> API IDENTIFIER COLON STRING SEMICOLON .)


state 38

    (11) resource_definition -> RECURSO STRING DE IDENTIFIER PARA . STRING EM IDENTIFIER LBRACE optional_resource_body RBRACE

    STRING          shift and go to state 43


state 39

    (35) header_definition -> CABECALHO STRING DE IDENTIFIER PARA . STRING EM IDENTIFIER SEMICOLON

    STRING          shift and go to state 44


state 40

    (36) header_definition -> CABECALHO STRING COM STRING SEMICOLON .

    API             reduce using rule 36 (header_definition -> CABECALHO STRING COM STRING SEMICOLON .)
    RECURSO         reduce using rule 36 (header_definition -> CABECALHO STRING COM STRING SEMICOLON .)
    CABECALHO       reduce using rule 36 (header_definition -> CABECALHO STRING COM STRING SEMICOLON .)
    FUNCAO          reduce using rule 36 (header_definition -> CABECALHO STRING COM STRING SEMICOLON .)
    RBRACE          reduce using rule 36 (header_definition -> CABECALHO STRING COM STRING SEMICOLON .)


state 41

    (43) function_definition -> FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN . LBRACE function_body_placeholder RBRACE

    LBRACE          shift and go to state 45


state 42

    (39) function_param_list -> function_param_list COMMA . function_param_identifier
    (37) function_param_identifier -> . IDENTIFIER
    (38) function_param_identifier -> . VALOR

    IDENTIFIER      shift and go to state 31
    VALOR           shift and go to state 36

    function_param_identifier      shift and go to state 46

state 43

    (11) resource_definition -> RECURSO STRING DE IDENTIFIER PARA STRING . EM IDENTIFIER LBRACE optional_resource_body RBRACE

    EM              shift and go to state 47


state 44

    (35) header_definition -> CABECALHO STRING DE IDENTIFIER PARA STRING . EM IDENTIFIER SEMICOLON

    EM              shift and go to state 48


state 45

    (43) function_definition -> FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN LBRACE . function_body_placeholder RBRACE
    (44) function_body_placeholder -> . empty_rule
    (45) empty_rule -> .

    RBRACE          reduce using rule 45 (empty_rule -> .)

    function_body_placeholder      shift and go to state 49
    empty_rule                     shift and go to state 50

state 46

    (39) function_param_list -> function_param_list COMMA function_param_identifier .

    COMMA           reduce using rule 39 (function_param_list -> function_param_list COMMA function_param_identifier .)
    RPAREN          reduce using rule 39 (function_param_list -> function_param_list COMMA function_param_identifier .)


state 47

    (11) resource_definition -> RECURSO STRING DE IDENTIFIER PARA STRING EM . IDENTIFIER LBRACE optional_resource_body RBRACE

    IDENTIFIER      shift and go to state 51


state 48

    (35) header_definition -> CABECALHO STRING DE IDENTIFIER PARA STRING EM . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 52


state 49

    (43) function_definition -> FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN LBRACE function_body_placeholder . RBRACE

    RBRACE          shift and go to state 53


state 50

    (44) function_body_placeholder -> empty_rule .

    RBRACE          reduce using rule 44 (function_body_placeholder -> empty_rule .)


state 51

    (11) resource_definition -> RECURSO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER . LBRACE optional_resource_body RBRACE

    LBRACE          shift and go to state 54


state 52

    (35) header_definition -> CABECALHO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 55


state 53

    (43) function_definition -> FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN LBRACE function_body_placeholder RBRACE .

    API             reduce using rule 43 (function_definition -> FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN LBRACE function_body_placeholder RBRACE .)
    RECURSO         reduce using rule 43 (function_definition -> FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN LBRACE function_body_placeholder RBRACE .)
    CABECALHO       reduce using rule 43 (function_definition -> FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN LBRACE function_body_placeholder RBRACE .)
    FUNCAO          reduce using rule 43 (function_definition -> FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN LBRACE function_body_placeholder RBRACE .)
    RBRACE          reduce using rule 43 (function_definition -> FUNCAO IDENTIFIER LPAREN optional_function_params RPAREN LBRACE function_body_placeholder RBRACE .)


state 54

    (11) resource_definition -> RECURSO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER LBRACE . optional_resource_body RBRACE
    (12) optional_resource_body -> . resource_body
    (13) optional_resource_body -> . empty_rule
    (14) resource_body -> . resource_body resource_statement
    (15) resource_body -> . resource_statement
    (45) empty_rule -> .
    (16) resource_statement -> . method_definition
    (17) resource_statement -> . parameter_definition
    (18) resource_statement -> . field_definition
    (19) resource_statement -> . transformation_definition
    (20) method_definition -> . METODO IDENTIFIER PARA IDENTIFIER SEMICOLON
    (21) parameter_definition -> . PARAMETRO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER optional_parameter_converter SEMICOLON
    (22) parameter_definition -> . PARAMETRO STRING DE IDENTIFIER optional_parameter_converter SEMICOLON
    (25) field_definition -> . CAMPO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER optional_format optional_converter SEMICOLON
    (30) transformation_definition -> . TRANSFORMAR VALOR source_condition PARA target_assignment SEMICOLON

    RBRACE          reduce using rule 45 (empty_rule -> .)
    METODO          shift and go to state 64
    PARAMETRO       shift and go to state 65
    CAMPO           shift and go to state 66
    TRANSFORMAR     shift and go to state 67

    optional_resource_body         shift and go to state 56
    resource_body                  shift and go to state 57
    empty_rule                     shift and go to state 58
    resource_statement             shift and go to state 59
    method_definition              shift and go to state 60
    parameter_definition           shift and go to state 61
    field_definition               shift and go to state 62
    transformation_definition      shift and go to state 63

state 55

    (35) header_definition -> CABECALHO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON .

    API             reduce using rule 35 (header_definition -> CABECALHO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON .)
    RECURSO         reduce using rule 35 (header_definition -> CABECALHO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON .)
    CABECALHO       reduce using rule 35 (header_definition -> CABECALHO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON .)
    FUNCAO          reduce using rule 35 (header_definition -> CABECALHO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON .)
    RBRACE          reduce using rule 35 (header_definition -> CABECALHO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER SEMICOLON .)


state 56

    (11) resource_definition -> RECURSO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER LBRACE optional_resource_body . RBRACE

    RBRACE          shift and go to state 68


state 57

    (12) optional_resource_body -> resource_body .
    (14) resource_body -> resource_body . resource_statement
    (16) resource_statement -> . method_definition
    (17) resource_statement -> . parameter_definition
    (18) resource_statement -> . field_definition
    (19) resource_statement -> . transformation_definition
    (20) method_definition -> . METODO IDENTIFIER PARA IDENTIFIER SEMICOLON
    (21) parameter_definition -> . PARAMETRO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER optional_parameter_converter SEMICOLON
    (22) parameter_definition -> . PARAMETRO STRING DE IDENTIFIER optional_parameter_converter SEMICOLON
    (25) field_definition -> . CAMPO STRING DE IDENTIFIER PARA STRING EM IDENTIFIER optional_format optional_converter SEMICOLON
    (30) transformation_definition -> . TRANSFORMAR VALOR source_condition PARA target_assignment SEMICOLON

    RBRACE          reduce using rule 12 (optional_resource_body -> resource_body .)
    METODO          shift and go to state 64
    PARAMETRO       shift and go to state 65
    CAMPO           shift and go to state 66
    TRANSFORMAR     shift and go to state 67

